# sandy

./: .env.example  .gitignore  .notes.swp  AGENTS.md  README.md  backfill_chroma.py  discord_handler.py  last10.py  logconf.py  main.py  manage.sh  memory.py  ollama_interface.py  prompt.py  pyproject.toml  registry.py  start_server.sh  tools.py  vector_memory.py
history/mcpmess/: README.md  main.py
history/recall/: .env.example  README.md  database.py  main.py  models.py  settings.py  test_api.py
history/server/: README.md  database.py  main.py  models.py  requirements.txt  test_api.py
recall/: __init__.py  database.py
sandy/: __init__.py  __main__.py  api.py  bot.py  config.py  health.py  last10.py  llm.py  logconf.py  logs.py  maintenance.py  memory.py  paths.py  pipeline.py  prompt.py  registry.py  runtime_state.py  tools.py  trace.py  vector_memory.py
sandy/data/prod/: recall.db  server.db
sandy/data/prod/chroma/: chroma.sqlite3
sandy/llm/: __init__.py  coercion.py  models.py
sandy/pipeline/: __init__.py  attachments.py  bouncer.py  brain.py  memory_worker.py  orchestrator.py  reply.py  retrieval.py  tool_dispatch.py  tracing.py
sandy/prompts/: bouncer_system.txt  brain_system.txt  summarizer_system.txt  tagger_system.txt  vision_detail_system.txt  vision_router_system.txt  voice_addendum.txt
sandy/recall/: __init__.py  database.py  models.py
sandy/voice/: __init__.py  capture.py  history.py  manager.py  models.py  response.py  stitching.py  stt.py  tracing.py  tts.py
sandy/voicemvp/: VOICE_HANDOVER_2026-03-31.md  VOICE_INTEGRATION_PLAN.md  __init__.py  __main__.py  app.py  stt.py  tts.py
searxng/: docker-compose.yml
searxng/config/: settings.yml
tests/: conftest.py  test_api.py  test_background.py  test_bot_pipeline.py  test_dashboard_page.py  test_health.py  test_llm.py  test_logconf.py  test_logs_cli.py  test_main.py  test_maintenance.py  test_memory.py  test_paths.py  test_recall_db.py  test_registry.py  test_runtime_config_loading.py  test_runtime_state.py  test_tools.py  test_voice_history.py  test_voice_manager.py  test_voice_models.py  test_voice_response.py  test_voice_stitching.py  test_voicemvp.py
tts_service/: VOICE_TTS_HANDOFF_2026-03-29.md  pyproject.toml
tts_service/assets/: clone_reference.txt
tts_service/scripts/: render_candidate_refs.py
tts_service/tts_service/: __init__.py  __main__.py  app.py
web/dashboard/: app.js  index.html  styles.css
