[tool.setuptools.packages.find]
exclude = ["data*", "history*", "build*", "*.egg-info*"]

[project]
name = "sandy"
version = "0.1.0"
description = "General purpose chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.0",
    "discord>=2.3.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "ollama>=0.4.0",
    "pillow>=11.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]
